# zybo-jetson_pcam-ir_streaming

./: README.md
boot/: uEnv.txt
zybo/: init-pcam.sh  zybo-cam-stream.c
zybo/zybo-streamer/: CMakeLists.txt  cam_header.h  main.cpp  toolchain.cmake  udp_sender.cpp  udp_sender.h  v4l2_capture.cpp
